fixes #123: to make metadata on image visible

--- a/web-app/css/print-search.css
+++ b/web-app/css/print-search.css
@@ -10,10 +10,6 @@ a:link:after, a:visited:after {
     display: none
 }
 
-/*.nano-content {*/
-/*width: auto;     border: 0;     margin: 0 5%;     padding: 0;     float: none;     position: static;     overflow: visible;*/
-/*}*/
-/*.facets {*/
-    /*height: 100% !important;*/
-    /*overflow-y: visible;*/
-/*}*/
+.meta {
+    color: white !important;
+}
